laborations/lab1/testsuite/good/redeclare_in_block.cc
int main () {
  int x0 = 32 ;
  { bool x0 = true ; }
  printInt(x0);
  return 0 ;
}
