laborations/lab1/testsuite/bad/decl-paren.cc
((const int foo = 0));
